--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com-drepaba</groupId>
+    <groupId>com-drepoba</groupId>
     <artifactId>hexagonal</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
